# frontend

./: README.md
server/: Cargo.toml
server/src/: http_app.rs  lobby.rs  main.rs  sockets.rs
server/src/routes/: lobbies.rs  mod.rs
server/src/state/: lobby.rs
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.module.css  App.tsx  main.tsx
