[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
lazy_static = "1.4.0"
futures-util = "0.3.29"
tokio-stream = "0.1.14"
